<resources>
    <string name="app_name">G-Movie Catalogue</string>
    <string name="masukkan_nama_film">Film Name</string>
    <string name="id_film"></string>
    <string name="cari">Find</string>
    <string name="nama_film">Batman</string>
    <string name="tanggal">Release</string>
    <string name="deskripsi">Synopsis</string>
    <string name="bagikan">Share</string>
    <string name="favorit">Favorite</string>
    <string name="nowplay">Now Playing</string>
    <string name="home">Home</string>
    <string name="upcome">Upcoming</string>
    <string name="nama_pengguna">Gregorio Imanuel</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="action_setting">Language</string>
    <string name="btn_share">Share</string>
    <string name="btn_detail">Detail</string>
    <string name="listView">List View</string>
    <string name="cardView">Card View</string>
    <string name="Subtitle">Subtitle</string>
    <string name="Popularity">Popularity</string>
    <string name="Voting">Voting</string>
    <string name="sinopsidetail">Synopsis</string>
    <string name="setting">Setting</string>

    <string name="titleReminder">Where have you been?</string>
    <string name="contentReminder">Check our update news about movie</string>

    <string name="summary_dailyremind">Set your daily Reminder</string>
    <string name="title_dailyremind">Daily Reminder Notif</string>

    <string name="summary_upcomeremind">Set your upcoming Reminder</string>
    <string name="title_upcomeremind">Upcoming Reminder Notif</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">FAVOURITE WIDGET</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Kosong</string>
</resources>
