<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.gregorio.moviecatalouge.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="110dp"
            android:paddingBottom="@dimen/nav_header_vertical_space"
            android:background="@color/colorAppLayout">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="167dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/colorTitle"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/nama_film"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_judul"
                android:layout_centerHorizontal="true"

                android:text="@string/tanggal"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/detail_margin"
            android:layout_marginRight="@dimen/detail_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorSubb">

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sinopsidetail"
                    android:textSize="16dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorSub"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="10dp">
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_desc"
                    android:textSize="16dp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorSubb">

                <TextView
                    android:id="@+id/tv_sub"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/Subtitle"
                    android:textColor="@android:color/white"
                    android:background="@color/colorSub"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="10dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_subtitle"
                    android:layout_toRightOf="@id/tv_sub"
                    android:textSize="16dp"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorSubb">

                <TextView
                    android:id="@+id/tv_pop"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/Popularity"
                    android:textColor="@android:color/white"
                    android:background="@color/colorSub"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="10dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_popularity"
                    android:layout_toRightOf="@id/tv_pop"
                    android:textSize="16dp"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/colorSubb">

                <TextView
                    android:id="@+id/tv_vot"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/Voting"
                    android:textColor="@android:color/white"
                    android:background="@color/colorSub"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="10dp">
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_voting"
                    android:layout_toRightOf="@id/tv_vot"
                    android:textSize="16dp"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>